--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,27 @@
-
-Flask==1.1.1
+certifi==2020.4.5.2
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
+comtypes==1.1.7
+cryptography==2.9.2
+decorator==4.4.2
+emoji==0.5.4
+Flask==1.1.2
+gunicorn==20.0.4
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+playsound==1.2.2
+pycparser==2.20
+pygame==1.9.6
+pyttsx3==2.88
+requests==2.23.0
+six==1.15.0
+soupsieve==2.0.1
+tornado==6.0.4
+urllib3==1.25.9
+Werkzeug==1.0.1
 Flask-Cors==3.0.8
 
 Jinja2==2.10.3
